--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,7 @@
       <a href="about.html" class="nav-links">About</a>
       <a href="team.html" class="nav-links">Team</a>
       <a href="gallery.html" class="current nav-links">Gallery</a>
+      <a href="contact.html" class="nav-links">Contact</a>
     </div>
     <div>
       <a href="https://twitter.com/compsigh_wav" target="_blank" class="social-links"><img
